--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URL=mongodb+srv://dokjakim155:yDDGwCNR3SqCVuNl@telegram.a5ag6r1.mongodb.net/?retryWrites=true&w=majority
-MUSIC_PATH=PATH_TO_YOUR_MUSIC
+MUSIC_PATH=./Neko
 CACHE_PATH=./cache
 SPOTIFY_ID=6a376276a5ab4ce88428cdb8f76eaf8b
 SPOTIFY_SECRET=86e6b8e2e4a74f89a7774e3856871944"
